crates/biome_migrate/src/snapshots/biome_migrate__rule_mover__tests__assert_snapshot-2.snap
---
source: crates/biome_migrate/src/rule_mover.rs
expression: buffer
snapshot_kind: text
---
## Source

```json
{
	"linter": {
		"rules": {
			"style": {
				"noVar": "error",
				"noArguments": "error"
			}
		}
	}
}

```

## Result

```
{
	"linter": {
		"rules": {
			"style": {
				"noArguments": "error"
			},
			"suspicious": {
				"noArguments": "error"
			}
		}
	}
}

```
