crates/biome_migrate/src/snapshots/biome_migrate__rule_mover__tests__move_rule_to_new_group.snap
---
source: crates/biome_migrate/src/rule_mover.rs
expression: buffer
snapshot_kind: text
---
## Source

```json
{
	"linter": {
		"rules": {
			"style": {
				"noVar": "error"
			}
		}
	}
}

```

## Result

```
{
	"linter": {
		"rules": {
			"suspicious": {
				"noVar": "error"
			}
		}
	}
}

```
